--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
